# internal/side/router/side_router.go
@@ -8,13 +8,15 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-func SideRouter(logger log.Logger, sideService service.SideService, authProvider auth.AuthProvider) func(*fiber.App) {
-	return func(app *fiber.App) {
+func SideRouter(logger log.Logger, authProvider auth.AuthProvider, sideService service.SideService, postService service.PostService) func(fiber.Router) {
+	return func(app fiber.Router) {
 		router := app.Route("/sides", func(router fiber.Router) {})
 
-		router.Use(auth.CredentialParserMiddleware(authProvider))
+		router.Use(auth.JwtBearerParserMiddleware(authProvider))
 
 		router.Get("/", handler.GetSidesHandler(logger, sideService))
 		router.Post("/", handler.CreateSideHandler(logger, sideService))
+		router.Post("/:sideID/_join", auth.AuthenticationMiddleware, handler.JoinSideHandler(logger, sideService))
+		router.Post("/:sideID/posts", auth.AuthenticationMiddleware, handler.CreatePostHandler(logger, postService))
 	}
 }
